Jaccard and cosine dicts, top 100

--- a/DataMining_Project1.ipynb
+++ b/DataMining_Project1.ipynb
@@ -6,7 +6,7 @@
       "name": "DataMining_Project1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMbpaVImE+0VFGasBlnk1vv"
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Themis-Sot/datam/blob/main/DataMining_Project1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -57,7 +67,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "553e7743-a038-48e9-9de9-8dff77eba683"
+        "outputId": "aa4254bc-1d49-4871-d9b7-7f2b5428e4b5"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -69,12 +79,12 @@
         "import re\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer \n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
         "from sklearn.metrics import jaccard_score\n",
-        "from __future__ import division\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive',force_remount=True)"
       ],
-      "execution_count": 40,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,13 +112,13 @@
           "height": 289
         },
         "id": "vIoT2jbSm-yQ",
-        "outputId": "14344d93-b2eb-452e-de4b-bddbaf29a65f"
+        "outputId": "9db52e0b-c562-49aa-dbc2-e2d69613d603"
       },
       "source": [
-        "netflix=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/netflix_titles.csv')\n",
+        "netflix=pd.read_csv('/content/gdrive/MyDrive/netflix_titles.csv')\n",
         "netflix.head(5)"
       ],
-      "execution_count": 41,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +250,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 5
         }
       ]
     },
@@ -267,7 +277,7 @@
         "imdb_movies=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/imdb_movies.csv',low_memory=False)\n",
         "imdb_movies.head(5)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -486,7 +496,7 @@
         "imdb_ratings=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/imdb_ratings.csv',low_memory=False)\n",
         "imdb_ratings.head(5)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,7 +890,7 @@
         "else:\n",
         "    print('Υπερτερούν οι σειρές με αριθμό', num_show)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -932,7 +942,7 @@
         "mpl.pyplot.xlabel('Year')\n",
         "mpl.pyplot.tick_params(axis='x', which='major', labelsize=9)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -995,7 +1005,7 @@
         "top_value=temp['country'].value_counts()[0]\n",
         "print(\"Η χώρα με το περισσότερο περιεχόμενο είναι:\",top_country,\"με\",top_value, \"παραγωγές\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1044,7 +1054,7 @@
         "    print('Η χώρα: ',x)\n",
         "    print('Έχει περιεχόμενο: ',','.join(y),'\\n')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1461,7 +1471,7 @@
         "    plt.tick_params(axis='x', labelsize=10)\n",
         "    plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2849,7 +2859,7 @@
         "    plt.tick_params(axis='x', labelsize=10)\n",
         "    plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3744,7 +3754,7 @@
         "plt.xlabel('Rating')\n",
         "plt.tick_params(axis='x', which='major', labelsize=9)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3806,7 +3816,7 @@
         "plt.xlabel('Rating')\n",
         "plt.tick_params(axis='x', which='major', labelsize=9)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3866,7 +3876,7 @@
         "plt.ylabel('Count')\n",
         "plt.xlabel('Month')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3933,7 +3943,7 @@
         "plt.tick_params(axis='x', labelsize=15)\n",
         "plt.tick_params(axis='y', labelsize=13)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3996,7 +4006,7 @@
         "    plt.tick_params(axis='x', labelsize=10)\n",
         "    plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5466,7 +5476,7 @@
         "plt.tick_params(axis='y', labelsize=12)\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5523,7 +5533,7 @@
         "for i, j in topMovies.iteritems():\n",
         "    print(i, \":\", j)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5590,7 +5600,7 @@
         "bTest = bTest.loc[:780]\n",
         "bTest['title_desc'] = bTest['title'] + ' ' + bTest['description']"
       ],
-      "execution_count": 43,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -5614,7 +5624,7 @@
         "BoW = bowVector.fit_transform(bTest['title_desc'])\n",
         "BoWarray = BoW.toarray()"
       ],
-      "execution_count": 44,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -5637,7 +5647,7 @@
         "\n",
         "TFIDF = tfidfVector.fit_transform(bTest['title_desc'])"
       ],
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -5673,14 +5683,94 @@
         "id": "07osWt8vs9qG"
       },
       "source": [
-        "similarities = {}\n",
-        "for i in range(len(BoWarray) - 1):\n",
-        "    for j in range(i+1, len(BoWarray)):\n",
-        "        jac_sim = jaccard_score(BoWarray[i], BoWarray[j], average='binary')\n",
-        "        similarities[(bTest.iat[i,2], bTest.iat[j,2])] = jac_sim"
+        "jaccarDict = {}\n",
+        "for i in range(len(BoWarray)):\n",
+        "    title1 = bTest.iat[i,2]\n",
+        "    jaccarDict[title1] = []\n",
+        "    for j in range(len(BoWarray)):\n",
+        "        if i != j:\n",
+        "            jac_sim = jaccard_score(BoWarray[i], BoWarray[j], average='binary')\n",
+        "            title2 = bTest.iat[j,2]\n",
+        "            jaccarDict[title1].append((title2, jac_sim))\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 45,
+      "execution_count": 40,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_QxZ3uQ4VLNR"
+      },
+      "source": [
+        "**b**. *Cosine similarity*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lQeo7iq4VKeO"
+      },
+      "source": [
+        "cos_sim = cosine_similarity(TFIDF, TFIDF)\n",
+        "\n",
+        "cosDict = {}\n",
+        "for x in range(len(cos_sim)):\n",
+        "    title1 = bTest.iat[x,2]\n",
+        "    cosDict[title1] = []\n",
+        "    for y in range(len(cos_sim)):\n",
+        "        if x != y:\n",
+        "            title2 = bTest.iat[y,2]\n",
+        "            cosDict[title1].append((title2, cos_sim[x][y]))"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tLCzHPbNcyLf"
+      },
+      "source": [
+        "jaccard100 = {}\n",
+        "cosine100 = {}\n",
+        "\n",
+        "for k in jaccarDict:\n",
+        "    jaccarDict[k].sort(reverse=True, key=lambda tup: tup[1])\n",
+        "    jaccard100[k] = jaccarDict[k][:100]\n",
+        "    \n",
+        "for m in cosDict:\n",
+        "    cosDict[m].sort(reverse=True, key=lambda tup: tup[1])\n",
+        "    cosine100[m] = cosDict[m][:100]\n",
+        "\n"
+      ],
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y9cGaZFIlFmX",
+        "outputId": "f4471c9b-a74e-4f15-aa93-cde92fefe9be"
+      },
+      "source": [
+        "print(jaccard100['Asoka'])"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[('American Hangman', 0.15384615384615385), ('A Serious Man', 0.125), ('Alarmoty in the Land of Fire', 0.125), ('Æon Flux', 0.1111111111111111), ('Aarakshan', 0.1111111111111111), ('Ankhon Dekhi', 0.1111111111111111), ('Backfire', 0.1111111111111111), ('100 Meters', 0.1), ('A Fortunate Man', 0.1), ('Arrow', 0.1), ('Bad Guys: Vile City', 0.1), ('Barfi!', 0.1), (\"2307: Winter's Dream\", 0.09090909090909091), ('A Perfect Man', 0.09090909090909091), ('Aiyyaa', 0.09090909090909091), ('Arjun: The Warrior Prince', 0.09090909090909091), ('Babamın Ceketi', 0.09090909090909091), ('#Alive', 0.08333333333333333), ('13 Sins', 0.08333333333333333), ('30 Days of Luxury', 0.08333333333333333), ('50 First Dates', 0.08333333333333333), ('AlphaGo', 0.08333333333333333), ('Always Be My Maybe', 0.08333333333333333), ('Bad Education', 0.08333333333333333), ('Badalte Rishton Ki Dastaan', 0.08333333333333333), ('Barbarians', 0.08333333333333333), ('Abhinetri', 0.07692307692307693), ('Aftermath', 0.07692307692307693), ('Alibaba Aur 40 Chor', 0.07692307692307693), ('All The Reasons To Forget', 0.07692307692307693), ('Alt-Right: Age of Rage', 0.07692307692307693), ('An Evening with Beverly Luff Linn', 0.07692307692307693), ('An Ordinary Man', 0.07692307692307693), ('Ant-Man and the Wasp', 0.07692307692307693), ('Batman: The Killing Joke', 0.07692307692307693), ('24 Hours to Live', 0.07142857142857142), ('7 (Seven)', 0.07142857142857142), ('A Family Man', 0.07142857142857142), ('Aamir', 0.07142857142857142), ('Aapla Manus', 0.07142857142857142), ('Abzurdah', 0.07142857142857142), (\"All Hallows' Eve\", 0.07142857142857142), ('American Beauty', 0.07142857142857142), ('Awake', 0.07142857142857142), ('Back to 1989', 0.07142857142857142), ('Bazaar', 0.07142857142857142), ('Bbuddah Hoga Terra Baap', 0.07142857142857142), ('Ég man þig', 0.06666666666666667), ('20 Minutes', 0.06666666666666667), ('4th Man Out', 0.06666666666666667), ('7 Din Mohabbat In', 0.06666666666666667), ('A Flying Jatt', 0.06666666666666667), ('A Single Man', 0.06666666666666667), ('A Very Special Love', 0.06666666666666667), ('Abdo Mota', 0.06666666666666667), ('Action Replayy', 0.06666666666666667), ('Ahista Ahista', 0.06666666666666667), ('Ala Vaikunthapurramuloo', 0.06666666666666667), ('American History X', 0.06666666666666667), ('Angu Vaikuntapurathu (Malayalam)', 0.06666666666666667), ('Anjaan', 0.06666666666666667), ('Back Street Girls -GOKUDOLS-', 0.06666666666666667), ('Battlefield Recovery', 0.06666666666666667), ('A Chaster Marriage', 0.0625), ('Ajji', 0.0625), ('All Day and a Night', 0.0625), ('Always a Witch', 0.0625), ('Antar: Son of Shadad', 0.0625), ('Atlantics', 0.0625), ('187', 0.058823529411764705), ('#FriendButMarried', 0.058823529411764705), ('10 Days in Sun City', 0.058823529411764705), ('A Man Called God', 0.058823529411764705), ('An Innocent Mistake', 0.058823529411764705), ('Barsaat', 0.058823529411764705), ('100% Halal', 0.05555555555555555), ('A Mission in an Old Movie', 0.05555555555555555), ('Ajab Prem Ki Ghazab Kahani', 0.05555555555555555), ('Albert Pinto Ko Gussa Kyun Aata Hai?', 0.05555555555555555), ('20th Century Women', 0.05263157894736842), ('A Ghost Story', 0.05263157894736842), ('Balu Mahi', 0.05263157894736842), ('Austin Powers: International Man of Mystery', 0.05), ('Baahubali 2: The Conclusion (Hindi Version)', 0.038461538461538464), ('Baahubali 2: The Conclusion (Malayalam Version)', 0.038461538461538464), ('Baahubali 2: The Conclusion (Tamil Version)', 0.037037037037037035), ('Baahubali: The Beginning (English Version)', 0.03333333333333333), ('Baahubali: The Beginning (Hindi Version)', 0.03333333333333333), ('Baahubali: The Beginning (Malayalam Version)', 0.03333333333333333), ('Baahubali: The Beginning (Tamil Version)', 0.03225806451612903), ('3%', 0.0), ('7:19', 0.0), ('23:59', 0.0), ('9', 0.0), ('21', 0.0), ('46', 0.0), ('122', 0.0), ('706', 0.0), ('1920', 0.0), ('1922', 0.0)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
