--- a/DataMining_Project1.ipynb
+++ b/DataMining_Project1.ipynb
@@ -98,6 +98,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "I6Jlhjt93HTz"
+      },
+      "source": [
+        "**Τα παρακάτω διαβάσματα μπορεί να θέλουν αλλαγή στο path για να τρέξουν σωστά. Εμείς τα εκτελέσαμε με path βάσει της ταξινόμησης μας στο δικό μας Drive.**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zKcLekNem3fx"
       },
       "source": [
