2.meleti ton dedomenon

--- a/DataMining_Project2.ipynb
+++ b/DataMining_Project2.ipynb
@@ -6,7 +6,7 @@
       "name": "DataMining_Project2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWgcF+0Gecq8g5aSM7240C"
+      "authorship_tag": "ABX9TyNQ+2UKP07dL2QDvtqsuHjV"
     },
     "kernelspec": {
       "name": "python3",
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9sEI2WYCbBnC",
-        "outputId": "a82a7817-4b77-4675-d7d7-90484077191b"
+        "outputId": "881a5b35-f1bf-4900-eca1-db24af6d6e8c"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -72,7 +72,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive',force_remount=True)"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,6 +80,298 @@
             "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mvSZNYhHR3MW"
+      },
+      "source": [
+        "*Διάβασμα αρχείου Fake*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "soxWQp4SR-rk",
+        "outputId": "80d7a0e9-e5b2-4ea5-f046-0e528e61e573"
+      },
+      "source": [
+        "fake=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project2/NewsDataset/Fake.csv')\n",
+        "fake.head(5)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "      <th>text</th>\n",
+              "      <th>subject</th>\n",
+              "      <th>date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Donald Trump Sends Out Embarrassing New Year’...</td>\n",
+              "      <td>Donald Trump just couldn t wish all Americans ...</td>\n",
+              "      <td>News</td>\n",
+              "      <td>December 31, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Drunk Bragging Trump Staffer Started Russian ...</td>\n",
+              "      <td>House Intelligence Committee Chairman Devin Nu...</td>\n",
+              "      <td>News</td>\n",
+              "      <td>December 31, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Sheriff David Clarke Becomes An Internet Joke...</td>\n",
+              "      <td>On Friday, it was revealed that former Milwauk...</td>\n",
+              "      <td>News</td>\n",
+              "      <td>December 30, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Trump Is So Obsessed He Even Has Obama’s Name...</td>\n",
+              "      <td>On Christmas day, Donald Trump announced that ...</td>\n",
+              "      <td>News</td>\n",
+              "      <td>December 29, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Pope Francis Just Called Out Donald Trump Dur...</td>\n",
+              "      <td>Pope Francis used his annual Christmas Day mes...</td>\n",
+              "      <td>News</td>\n",
+              "      <td>December 25, 2017</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                               title  ...               date\n",
+              "0   Donald Trump Sends Out Embarrassing New Year’...  ...  December 31, 2017\n",
+              "1   Drunk Bragging Trump Staffer Started Russian ...  ...  December 31, 2017\n",
+              "2   Sheriff David Clarke Becomes An Internet Joke...  ...  December 30, 2017\n",
+              "3   Trump Is So Obsessed He Even Has Obama’s Name...  ...  December 29, 2017\n",
+              "4   Pope Francis Just Called Out Donald Trump Dur...  ...  December 25, 2017\n",
+              "\n",
+              "[5 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kq3Z05anU08m"
+      },
+      "source": [
+        "*Διάβασμα αρχείου True*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "Mefw4AgfU7Cm",
+        "outputId": "5284560e-9cb1-44ac-b890-5c2598c1d24d"
+      },
+      "source": [
+        "true=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project2/NewsDataset/True.csv')\n",
+        "true.head(5)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "      <th>text</th>\n",
+              "      <th>subject</th>\n",
+              "      <th>date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>As U.S. budget fight looms, Republicans flip t...</td>\n",
+              "      <td>WASHINGTON (Reuters) - The head of a conservat...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 31, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>U.S. military to accept transgender recruits o...</td>\n",
+              "      <td>WASHINGTON (Reuters) - Transgender people will...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 29, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Senior U.S. Republican senator: 'Let Mr. Muell...</td>\n",
+              "      <td>WASHINGTON (Reuters) - The special counsel inv...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 31, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>FBI Russia probe helped by Australian diplomat...</td>\n",
+              "      <td>WASHINGTON (Reuters) - Trump campaign adviser ...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 30, 2017</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Trump wants Postal Service to charge 'much mor...</td>\n",
+              "      <td>SEATTLE/WASHINGTON (Reuters) - President Donal...</td>\n",
+              "      <td>politicsNews</td>\n",
+              "      <td>December 29, 2017</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                               title  ...                date\n",
+              "0  As U.S. budget fight looms, Republicans flip t...  ...  December 31, 2017 \n",
+              "1  U.S. military to accept transgender recruits o...  ...  December 29, 2017 \n",
+              "2  Senior U.S. Republican senator: 'Let Mr. Muell...  ...  December 31, 2017 \n",
+              "3  FBI Russia probe helped by Australian diplomat...  ...  December 30, 2017 \n",
+              "4  Trump wants Postal Service to charge 'much mor...  ...  December 29, 2017 \n",
+              "\n",
+              "[5 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ewtVc5HBX_Rf"
+      },
+      "source": [
+        "**1. Προεπεξεργασία/ Καθάρισμα**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XEnTYB1faylr"
+      },
+      "source": [
+        "fakeNN=fake.dropna()\n",
+        "trueNN=true.dropna()"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8uQkK2ATg8ws"
+      },
+      "source": [
+        "**2.  Μελέτη των δεδομένων.**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gaihY7wIhG2a"
+      },
+      "source": [
+        "*α. Ο τίτλος καθορίζει αρκετά το περιεχόμενο ενός άρθρου. Προσπαθήστε να\n",
+        "οπτικοποιήστε τους τίτλους των fake και των non-fake news έτσι ώστε να μπορεί\n",
+        "κάποιος να εντοπίσει τα κεντρικά θέματα τα οποία διαπραγματεύονται τα άρθρα.*"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M1jJEP-1hLb8",
+        "outputId": "45a5fb06-efd3-4cf8-d74e-62ab9fae2872"
+      },
+      "source": [
+        "fake['subject'].unique()"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['News', 'politics', 'Government News', 'left-news', 'US_News',\n",
+              "       'Middle-east'], dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
         }
       ]
     }
