--- a/DataMining_Project2.ipynb
+++ b/DataMining_Project2.ipynb
@@ -6,7 +6,7 @@
       "name": "DataMining_Project2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQ+2UKP07dL2QDvtqsuHjV"
+      "authorship_tag": "ABX9TyPMPRm3hdrIp1GtW2c8BIsc"
     },
     "kernelspec": {
       "name": "python3",
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9sEI2WYCbBnC",
-        "outputId": "881a5b35-f1bf-4900-eca1-db24af6d6e8c"
+        "outputId": "4d6d11f5-aa23-4540-ca52-1567442719c0"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -69,14 +69,19 @@
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "from sklearn.metrics import jaccard_score\n",
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "nltk.download('stopwords')\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive',force_remount=True)"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
             "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
@@ -100,13 +105,13 @@
           "height": 204
         },
         "id": "soxWQp4SR-rk",
-        "outputId": "80d7a0e9-e5b2-4ea5-f046-0e528e61e573"
+        "outputId": "bd785cc8-21eb-45b2-9b5d-d0b608770f37"
       },
       "source": [
         "fake=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project2/NewsDataset/Fake.csv')\n",
         "fake.head(5)"
       ],
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +195,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 8
         }
       ]
     },
@@ -211,13 +216,13 @@
           "height": 204
         },
         "id": "Mefw4AgfU7Cm",
-        "outputId": "5284560e-9cb1-44ac-b890-5c2598c1d24d"
+        "outputId": "d283a23a-5fe5-406b-9b83-fe04ad5354a1"
       },
       "source": [
         "true=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project2/NewsDataset/True.csv')\n",
         "true.head(5)"
       ],
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +306,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     },
@@ -323,7 +328,7 @@
         "fakeNN=fake.dropna()\n",
         "trueNN=true.dropna()"
       ],
-      "execution_count": 24,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -353,12 +358,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M1jJEP-1hLb8",
-        "outputId": "45a5fb06-efd3-4cf8-d74e-62ab9fae2872"
+        "outputId": "52239f34-dcb8-4a23-9d60-8ab5b333bde1"
       },
       "source": [
         "fake['subject'].unique()"
       ],
-      "execution_count": 45,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +376,63 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nsBjXVrS-72M",
+        "outputId": "55628491-34a8-4210-c0c8-d14692613f04"
+      },
+      "source": [
+        "fakeTitles = fakeNN['title']\n",
+        "trueTitles = trueNN['title']\n",
+        "\n",
+        "fakeTokens = [title.lower().split() for title in fakeTitles]\n",
+        "trueTokens = [title.lower().split() for title in trueTitles]\n",
+        "\n",
+        "print(fakeTokens[0])\n",
+        "print(trueTokens[0])\n",
+        "\n",
+        "stop_words = list(stopwords.words('english'))\n",
+        "\n",
+        "fakeTokens2 = []\n",
+        "trueTokens2 = []\n",
+        "\n",
+        "for i in range(len(fakeTokens)):\n",
+        "    temp = []\n",
+        "    for word in fakeTokens[i]:\n",
+        "        if word not in stop_words:\n",
+        "            temp.append(word)\n",
+        "    fakeTokens2.append(temp)\n",
+        "\n",
+        "\n",
+        "for i in range(len(trueTokens)):\n",
+        "    temp = []\n",
+        "    for word in trueTokens[i]:\n",
+        "        if word not in stop_words:\n",
+        "            temp.append(word)\n",
+        "    trueTokens2.append(temp)\n",
+        "\n",
+        "print(fakeTokens2[0])\n",
+        "print(trueTokens2[0])"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['donald', 'trump', 'sends', 'out', 'embarrassing', 'new', 'year’s', 'eve', 'message;', 'this', 'is', 'disturbing']\n",
+            "['as', 'u.s.', 'budget', 'fight', 'looms,', 'republicans', 'flip', 'their', 'fiscal', 'script']\n",
+            "['donald', 'trump', 'sends', 'embarrassing', 'new', 'year’s', 'eve', 'message;', 'disturbing']\n",
+            "['u.s.', 'budget', 'fight', 'looms,', 'republicans', 'flip', 'fiscal', 'script']\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
